--- a/app/globals.css
+++ b/app/globals.css
@@ -14,6 +14,15 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  margin: 36px;
+}
+
+h1 {
+  padding-bottom: 28px;
+}
+
+div {
+  padding-bottom: 24px;
 }
 
 body {
