--- a/app/globals.css
+++ b/app/globals.css
@@ -14,7 +14,27 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-  margin: 36px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  background-image: url('/images/dazzle-icon-512x512.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;  
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 36px;
+  width: 100%;
+  height: 100%;
+  background: rgba(50, 50, 50, 0.2); /* Adjust the alpha value to control the bleach effect */
+  z-index: 1;
 }
 
 h1 {
