--- a/app/globals.css
+++ b/app/globals.css
@@ -66,3 +66,22 @@ a {
     color-scheme: dark;
   }
 }
+
+.page-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  /* border: red solid; */
+}
+
+.page-content {
+  height:80%;
+  width:80%;
+  padding: 24px;
+  background: rgba(50, 50, 50, 0.2); /* Adjust the alpha value to control the bleach effect */
+  background-color: rgba(255, 255, 255, 0.8);
+  border: white solid;
+  border-radius: 20px;
+}
