--- a/app/globals.css
+++ b/app/globals.css
@@ -1,87 +1,95 @@
+/* Import Roboto from Google Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+    --background: #ffffff;
+    --foreground: #171717;
 }
 
 @media (prefers-color-scheme: dark) {
-  :root {
+    :root {
     --background: #0a0a0a;
     --foreground: #ededed;
-  }
+    }
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+html, body {
+    max-width: 100vw;
+    overflow-x: hidden;
 
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  background-image: url('/images/dazzle-icon-512x512.png');
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;  
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    background-image: url('/images/dazzle-icon-512x512.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;  
 }
+
+html, body, input, button {
+    font-family: 'Roboto', sans-serif;
+    font-size: 1.2rem;
+}
+
 
 .overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  padding: 36px;
-  width: 100%;
-  height: 100%;
-  background: rgba(50, 50, 50, 0.2); /* Adjust the alpha value to control the bleach effect */
-  z-index: 1;
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 36px;
+    width: 100%;
+    height: 100%;
+    background: rgba(50, 50, 50, 0.2); /* Adjust the alpha value to control the bleach effect */
+    z-index: 1;
 }
 
 h1 {
-  padding-bottom: 28px;
+    padding-bottom: 28px;
 }
 
 div {
-  padding-bottom: 24px;
+    padding-bottom: 24px;
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
+    color: var(--foreground);
+    background: var(--background);
 }
 
 * {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+    color: inherit;
+    text-decoration: none;
 }
 
 @media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+    html {
+        color-scheme: dark;
+    }
 }
 
 .page-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
-  /* border: red solid; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    /* border: red solid; */
 }
 
 .page-content {
-  height:80%;
-  width:80%;
-  padding: 24px;
-  background: rgba(50, 50, 50, 0.2); /* Adjust the alpha value to control the bleach effect */
-  background-color: rgba(255, 255, 255, 0.8);
-  border: white solid;
-  border-radius: 20px;
+    height:80%;
+    width:80%;
+    padding: 24px;
+    background: rgba(50, 50, 50, 0.2); /* Adjust the alpha value to control the bleach effect */
+    background-color: rgba(255, 255, 255, 0.8);
+    border: white solid;
+    border-radius: 20px;
 }
