--- a/app/globals.css
+++ b/app/globals.css
@@ -35,6 +35,7 @@ html, body, input, button, textarea {
 
 input, textarea {
     font-size: 1rem;
+    padding:8px;
 }
 
 textarea {
@@ -53,7 +54,44 @@ textarea {
     z-index: 1;
 }
 
+form {
+    display: flex;
+    flex-direction: column;
+}
+
+.form-row {
+    display: flex;
+    justify-items: start;
+    justify-content: center;
+    width: 100%;
+    /* border: red solid; */
+}
+
+.form-label {
+    display: inline-block;
+    padding-right:12px;
+    min-width: 170px;
+    text-align: right;
+}
+
+.form-value {
+    display: inline-block;
+    min-width: 50%;
+}
+
+button {
+    padding: 12px;
+    background-color: #bf21f3;
+}
+
 h1 {
+    align-self: center;
+    padding-bottom: 24px;
+}
+
+h2 {
+    align-self: center;
+    font-size: 1rem;
     padding-bottom: 28px;
 }
 
@@ -93,8 +131,10 @@ a {
 }
 
 .page-content {
-    /* height:80%; */
-    /* width:80%; */
+    min-height:80%;
+    min-width:70%;
+    display: flex;
+    flex-direction: column;
     margin: auto;
     padding: 24px;
     background: rgba(50, 50, 50, 0.2); /* Adjust the alpha value to control the bleach effect */
