--- a/app/globals.css
+++ b/app/globals.css
@@ -70,13 +70,24 @@ form {
 .form-label {
     display: inline-block;
     padding-right:12px;
+    padding-bottom: 0px;
     min-width: 170px;
     text-align: right;
+    /* border: blue solid; */
 }
 
 .form-value {
     display: inline-block;
+    padding-bottom: 0px;
     min-width: 50%;
+    /* border: green solid; */
+}
+
+.form-subscript {
+    font-size: .5rem;
+    color: #444;
+    margin-top: 4px;
+    padding-bottom: 0px;
 }
 
 button {
