--- a/app/globals.css
+++ b/app/globals.css
@@ -21,6 +21,7 @@ html, body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    color: black;
     height: 100vh;
     background-image: url('/images/dazzle-icon-512x512.png');
     background-size: cover;
