--- a/app/globals.css
+++ b/app/globals.css
@@ -31,24 +31,13 @@ html, body {
 
 html, body, input, button, textarea {
     font-family: 'Roboto', sans-serif;
-    font-size: 1.2rem;
-}
-
-input, textarea {
-    font-size: 1rem;
-    padding:8px;
-}
-
-textarea {
-    width: 100%;
-    height: 4rem;
 }
 
 .overlay {
     position: absolute;
     top: 0;
     left: 0;
-    padding: 36px;
+    /* padding: 5%; */
     width: 100%;
     height: 100%;
     background: rgba(50, 50, 50, 0.2); /* Adjust the alpha value to control the bleach effect */
@@ -70,30 +59,21 @@ form {
 
 .form-label {
     display: inline-block;
-    padding-right:12px;
-    padding-bottom: 0px;
-    min-width: 170px;
     text-align: right;
     /* border: blue solid; */
 }
 
 .form-value {
     display: inline-block;
-    padding-bottom: 0px;
-    min-width: 50%;
     /* border: green solid; */
 }
 
 .form-subscript {
-    font-size: .5rem;
     color: #444;
-    margin-top: 4px;
     padding-bottom: 0px;
 }
 
 button {
-    padding: 12px;
-    min-width: 180px;
     background-color: #bf21f3;
 }
 
@@ -141,6 +121,8 @@ a {
 .page-content {
     min-height:80%;
     min-width:70%;
+    max-height:95%;
+    max-width:95%;
     display: flex;
     flex-direction: column;
     margin: auto;
@@ -149,4 +131,5 @@ a {
     background-color: rgba(255, 255, 255, 0.8);
     border: white solid;
     border-radius: 20px;
+    /* overflow-y: auto; */
 }
