--- a/app/globals.css
+++ b/app/globals.css
@@ -1,18 +1,6 @@
 /* Import Roboto from Google Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
-:root {
-    --background: #ffffff;
-    --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-    :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-    }
-}
-
 html, body {
     max-width: 100vw;
     overflow-x: hidden;
@@ -74,7 +62,7 @@ form {
 }
 
 button {
-    background-color: #bf21f3;
+    background-color: #cd7de8;
 }
 
 h1 {
