--- a/app/globals.css
+++ b/app/globals.css
@@ -111,7 +111,7 @@ a {
     max-height:95%;
     max-width:95%;
     display: flex;
-    flex-direction: column;
+    /* flex-direction: column; */
     margin: auto;
     padding: 24px;
     background: rgba(50, 50, 50, 0.2); /* Adjust the alpha value to control the bleach effect */
