--- a/app/[appName]/app-runner/app-runner.css
+++ b/app/[appName]/app-runner/app-runner.css
@@ -18,11 +18,42 @@
 }
 
 @media (max-width: 768px) {
+    div {
+        padding-bottom: 0px;
+    }
+
     .page-content {
+        /* background-color: orange; */
+        /* border: red solid; */
         flex-direction: column;
+        /* margin-top: 0px; */
+        height: 100%;
+        margin: 0px;
+        min-height: 0%;
+        width: 100%;
+        /* padding: 0px; */
+
+        /* top: 0; */
+        /* display: none; */
+        /* left: 0; */
+        /* position: fixed; */
+    }
+
+    #layout-chat-block {
+        /* border: green solid; */
+        flex-grow: 1;
+
+        /* display: none; */
+        /* height: 50%; */
     }
 
     #layout-webcam-block {
+        /* border: purple solid; */
+        /* bottom: 0; */
+        /* display: none; */
+        height: 90%;
+        /* left: 0; */
+        /* position: fixed; */
         width: 100%;
     }
 }
