--- a/app/globals.css
+++ b/app/globals.css
@@ -2,15 +2,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 html, body {
-    max-width: 100vw;
+    /* max-width: 100vw; */
     overflow-x: hidden;
+    background: rgba(50, 50, 50, 0.2);
 
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    color: black;
-    height: 100vh;
+    /* color: black; */
+    height: 100%;
+    width: 100%;
     /* background-image: url('/images/dazzle-icon-512x512.png');
     background-size: cover;
     background-position: center;
@@ -23,17 +25,6 @@ html, body, input, button, textarea {
 
 input {
     background-color: white;
-}
-
-.overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    /* padding: 5%; */
-    width: 100%;
-    height: 100%;
-    background: rgba(50, 50, 50, 0.2); /* Adjust the alpha value to control the bleach effect */
-    z-index: 1;
 }
 
 form {
@@ -67,7 +58,7 @@ form {
 }
 
 button {
-    background-color: #cd7de8;
+    background-color: #85b7f8;
 }
 
 h1 {
@@ -95,29 +86,3 @@ a {
     color: inherit;
     text-decoration: none;
 }
-
-.page-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
-    /* border: red solid; */
-}
-
-.page-content {
-    min-height:80%;
-    min-width:70%;
-    max-height:95%;
-    max-width:95%;
-    display: flex;
-    /* flex-direction: column; */
-    margin: auto;
-    padding: 24px;
-    background: rgba(50, 50, 50, 0.2); /* Adjust the alpha value to control the bleach effect */
-    background-color: rgba(255, 255, 255, 0.8);
-    border: white solid;
-    border-radius: 20px;
-    /* overflow-y: auto; */
-}
-
