--- a/app/mobile.css
+++ b/app/mobile.css
@@ -42,13 +42,30 @@
         height: 4rem;
     }
 
-    .webcam {
-        width: 100%;
-        max-height: 50vh;
-        object-fit: fill;
-    }
-
     .qr-code {
         display: none;
+    }
+
+    .page-content {
+        /* background-color: orange; */
+        /* border: red solid; */
+        border-width:0px;
+        border-radius: 0px;
+
+        flex-direction: column;
+        /* margin-top: 0px; */
+        height: 100%;
+        margin: 0px;
+        max-height:100%;
+        min-height: 0%;
+        min-width:70%;
+        max-width:100%;
+        width: 100%;
+        padding: 8px;
+
+        /* top: 0; */
+        /* display: none; */
+        /* left: 0; */
+        /* position: fixed; */
     }
 }
