--- a/app/non-mobile.css
+++ b/app/non-mobile.css
@@ -41,12 +41,32 @@ textarea {
     height: 4rem;
 }
 
-.webcam {
-    width: 250px;
-}
-
 .qr-code {
     /* border: red solid; */
     display: flex;
     justify-content: center;
 }
+
+.page-content {
+    /* border: red solid; */
+    border-width:4px;
+    /* background-color: red; */
+
+    background-color: rgba(255, 255, 255, 0.8);
+    /* 
+    background: rgba(50, 50, 50, 0.2);
+    */
+    border: white solid; 
+    border-radius: 20px;
+
+    min-height:80%;
+    max-height:95%;
+    min-width:70%;
+    max-width:95%;
+    display: flex;
+    /* flex-direction: column; */
+    margin: auto;
+    padding: 24px;
+    /* overflow-y: auto; */
+}
+
