--- a/app/[appName]/app-runner/app-runner.css
+++ b/app/[appName]/app-runner/app-runner.css
@@ -28,26 +28,39 @@
 
     #layout-chat-block {
         /* border: green solid; */
-        flex-grow: 1;
+        /* flex-grow: 1; */
 
         /* display: none; */
-        /* height: 50%; */
+        height: 50%;
     }
 
     #layout-webcam-block {
         /* border: purple solid; */
         /* bottom: 0; */
         /* display: none; */
-        /* height: 90%; */
+        /* flex-grow: 1; */
+        height: 50%;
         /* left: 0; */
         /* position: fixed; */
         margin-top: 12px;
+
         width: 100%;
     }
 
+    .webcam-wrapper {
+        /* border: blue solid; */
+        display: flex;
+        height: 100%;
+        justify-content: center;
+        position: relative;
+        overflow: hidden;
+    }
+
     .webcam {
+        /* flex-grow:1;  */
+        /* height: 100%; */
         width: 100%;
         /* max-height: 50vh; */
-        object-fit: fill;
+        object-fit: contain;
     }
 }
