--- a/app/[appName]/app-runner/app-runner.css
+++ b/app/[appName]/app-runner/app-runner.css
@@ -13,7 +13,8 @@
     /* border: blue solid; */
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: top;
+    align-items: center;
     width: 300px;
 }
 
