--- a/app/[appName]/app-runner/app-runner.css
+++ b/app/[appName]/app-runner/app-runner.css
@@ -53,6 +53,7 @@
         display: flex;
         height: 100%;
         justify-content: center;
+        width: 100%;
         position: relative;
         overflow: hidden;
     }
@@ -62,6 +63,6 @@
         /* height: 100%; */
         width: 100%;
         /* max-height: 50vh; */
-        object-fit: contain;
+        /* object-fit: contain; */
     }
 }
