--- a/app/globals.css
+++ b/app/globals.css
@@ -57,14 +57,41 @@ form {
     padding-bottom: 0px;
 }
 
+dialog {
+    background-color: #e9cdff;
+    border-radius: 20px;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 24px;
+    border: 1px solid #c67cfe;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
+
 button {
     background-color: #85b7f8;
     cursor:pointer;
 }
 
+.button-row {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding-bottom: 0px;
+}
+
+.text-button {
+    cursor: pointer;
+}
+
 h1 {
+    align-items: center;
     align-self: center;
+    display: flex;
+    /* line-height: 3rem; */
     padding-bottom: 24px;
+    /* vertical-align: middle; */
 }
 
 h2 {
