Add clear chat link

--- a/app/[appName]/app-runner/app-runner.css
+++ b/app/[appName]/app-runner/app-runner.css
@@ -29,6 +29,7 @@
 
     #layout-chat-block {
         /* border: green solid; */
+        display: flex;
         /* flex-grow: 1; */
 
         /* display: none; */
